@@ -340,6 +340,9 @@ public abstract class Element {
 
 	public static final String COLLAPSED =  "...";
 	public static boolean altPadRight = true;
+	// START KGU#401 2017-05-17: Issue #405
+	public static int caseShrinkByRot = 8;			// Number of CASE branches to trigger the attempt to shrink width by rotating branches
+	// END KGU#401 2017-05-17
 
 	// START KGU#156 2016-03-10; Enh. #124
 	protected static int maxExecCount = 0;			// Maximum number of executions of any element while runEventTracking has been on
@@ -473,6 +476,9 @@ public abstract class Element {
 	protected final void resetDrawingInfo()
 	{
 		this.isRectUpToDate = false;
+		// START KGU#401 2017-05-17: Issue #405
+		this.rotated = false;
+		// END KGU#401 2017-05-17
 	}
 	/**
 	 * Resets my drawing info and that of all of my ancestors
@@ -1635,6 +1641,9 @@ public abstract class Element {
 			StringList sl = new StringList();
 			sl.setCommaText(ini.getProperty("Case","\"?\",\"?\",\"?\",\"default\""));
 			preCase=sl.getText();
+			// START KGU#401 2017-05-18: Issue #405 - allow to reduce CASE width by branch element rotation
+			caseShrinkByRot = Integer.parseInt(ini.getProperty("CaseShrinkRot", "0"));
+			// END KGU#401 2017-05-18
 			preFor=ini.getProperty("For","for ? <- ? to ?");
 			preWhile=ini.getProperty("While","while ()");
 			preRepeat=ini.getProperty("Repeat","until ()");
@@ -1678,6 +1687,9 @@ public abstract class Element {
 			StringList sl = new StringList();
 			sl.setText(preCase);
 			ini.setProperty("Case",sl.getCommaText());
+			// START KGU#401 2017-05-18: Issue #405 - allow to reduce CASE width by branch element rotation
+			ini.setProperty("CaseShrinkRot", Integer.toString(Element.caseShrinkByRot));
+			// END KGU#401 2017-05-18
 			ini.setProperty("For",preFor);
 			ini.setProperty("While",preWhile);
 			ini.setProperty("Repeat",preRepeat);
@@ -2970,6 +2982,14 @@ public abstract class Element {
 			negCondition = "not " + condition;
 		}
 		return negCondition;
+	}
+	
+	public void setRotated(boolean _rotated)
+	{
+		if (rotated != _rotated) {
+			// Flip the stored rectangle
+			this.rect0 = new Rect(rect0.left, rect0.top, rect0.bottom, rect0.right);
+		}
 	}
 
 }
