@@ -684,6 +684,8 @@ Preferences.pnlCase.border=declaración CASE
 Preferences.pnlCase.tooltip=
 Preferences.lblCase.text=Contenido por defecto
 Preferences.lblCase.tooltip=El contenido por defecto de una declaración CASE.
+Preferences.lblCaseRot.text=Min. brazos para rotar
+Preferences.lblCaseRot.tooltip=Número de brazos encima del cual es tratado de reducir el ancho por rotation de brazos (0 = nunca) 
 Preferences.pnlFor.border=bucle PARA
 Preferences.pnlFor.tooltip=
 Preferences.lblFor.text=Contenido por defecto
